dockerized/frontend/public/css/underwings-org.webflow.css
/* ... */
.footer-nav-list {
  grid-column-gap: 1.5rem;
  grid-row-gap: 1.5rem;
  flex-flow: column;
  align-items: flex-start;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
  display: flex;
}

.link-to-top {
  border: 1px dashed var(--colors--dashed-grey);
  border-radius: 50%;
  flex-flow: row;
  justify-content: center;
  align-items: center;
  width: 3.75rem;
  min-width: 3.75rem;
  height: 3.75rem;
  min-height: 3.75rem;
  transition: border-color .2s linear;
  display: flex;
}

.link-to-top:hover {
  border-color: var(--colors--white-60);
}

.embeded-icon {
  display: flex;
}

.header-offset {
  height: 2.75rem;
  transition: all .2s linear;
}

.color-grey {
  color: var(--colors--grey);
}

.menu-button-line {
  background-color: var(--colors--white);
  width: 1.125rem;
  height: 1px;
  padding: 0;
}

.menu-button-lines {
  flex-flow: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 7px;
  min-height: 7px;
  max-height: 7px;
  display: flex;
}

.link-to-top-mobile {
  display: none;
}

.link-to-top-desktop {
  justify-content: center;
  align-items: center;
  display: flex;
}

.nav-menu-inner {
  grid-column-gap: 2.5vw;
  grid-row-gap: 2.5vw;
  justify-content: center;
  align-items: center;
  display: flex;
}

.privacy-content {
  grid-column-gap: var(--sizes--grid-x-gaps);
  grid-row-gap: var(--sizes--grid-x-gaps);
  flex-flow: column;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-auto-columns: 1fr;
  justify-content: flex-start;
  display: grid;
}

.privacy-content-wrapper {
  display: block;
}

.rich-text {
  margin-top: -3.75rem;
}

.rich-text h1 {
  letter-spacing: -.04em;
  margin-top: 0;
  margin-bottom: 2.5rem;
  font-size: 3rem;
}

.rich-text h2 {
  letter-spacing: -.04em;
  margin-top: 3.75rem;
  margin-bottom: 2.5rem;
  font-size: 1.75rem;
  line-height: 100%;
}

.rich-text h3 {
  letter-spacing: -.04em;
  margin-bottom: 1.25rem;
  font-family: Geistmono;
  font-size: 1rem;
  line-height: 100%;
}

.rich-text h4 {
  letter-spacing: -.04em;
  margin-top: 0;
  margin-bottom: 1.25rem;
  font-size: 1.75rem;
}

.rich-text p {
  color: var(--colors--grey);
  letter-spacing: -.04em;
  margin-top: 10px;
  margin-bottom: 0;
  font-size: 1rem;
  font-weight: 500;
  line-height: 150%;
}

.rich-text li {
  padding-left: .75rem;
  font-size: 1rem;
  line-height: 100%;
}

.rich-text ul {
  grid-column-gap: 6px;
  grid-row-gap: 6px;
  color: var(--colors--grey);
  flex-flow: column;
  justify-content: flex-start;
  align-items: flex-start;
  margin-top: 1.875rem;
  margin-bottom: 1.875rem;
  padding-left: 1.125rem;
  display: flex;
}

.rich-text a {
  color: var(--colors--grey);
  text-decoration: none;
  transition: color .2s linear;
}

.rich-text strong {
  font-weight: 600;
}

.footer-nav-link.nav-link-gradient {
  width: max-content;
}

.nav-link-gradient {
  background-image: linear-gradient(235deg, var(--colors--green-light-gradient), var(--colors--green-dark-gradient));
  filter: contrast() saturate(0%) brightness(200%);
  color: var(--colors--white);
  -webkit-text-fill-color: transparent;
  will-change: filter;
  -webkit-background-clip: text;
  background-clip: text;
  transition-property: all;
  transition-duration: .2s;
  transition-timing-function: ease-in-out;
}

.nav-link-gradient:hover {
  filter: none;
}

.hero {
  z-index: 5;
}

.hero-main-wrapper {
  grid-column-gap: 2.5rem;
  grid-row-gap: 2.5rem;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  display: flex;
  overflow: hidden;
}

.neon-line-box {
  z-index: 1;
  width: 28%;
  max-width: 24.5rem;
  height: 4px;
  max-height: 4px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  overflow: visible;
}

.neon-line-box.neon-line-box-section {
  width: 50%;
  max-width: 21.875rem;
  margin-bottom: .75rem;
}

.neon-line-shadow {
  z-index: 1;
  box-shadow: 0 25px 60px 0 var(--colors--green-dark-gradient), inset 0 -1px 3px 0 #a8feff, inset 0 1px 3px 0 #c0fff2;
  border-radius: 90px;
  width: 100%;
  height: 100%;
  position: absolute;
  inset: 0%;
}

.neon-line-inner {
  z-index: 2;
  background-image: linear-gradient(253deg, var(--colors--green-light-gradient), var(--colors--green-dark-gradient) 50%, var(--colors--green-light-gradient) 103%);
  border-radius: 90px;
  width: 200%;
  height: 100%;
  position: relative;
}

.neon-line-parent {
  z-index: 2;
  border-radius: 90px;
  width: 100%;
  max-width: 100%;
  height: 100%;
  position: relative;
  overflow: hidden;
}

.hero-heading-wrapper {
  grid-column-gap: 2.5rem;
  grid-row-gap: 2.5rem;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: auto;
  max-width: 62.5rem;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  position: relative;
}

.text-center {
  text-align: center;
}

.text-gradient-clip {
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
}

.vertical-heading-top {
  grid-column-gap: 1.75rem;
  grid-row-gap: 1.75rem;
  text-align: center;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  max-width: 59.375rem;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

.label {
  border: 1px solid var(--colors--grey);
  border-radius: 5.625rem;
  padding: .625rem 1rem;
}

.section-wrapper-vertical {
  z-index: 5;
  grid-column-gap: 3.75rem;
  grid-row-gap: 3.75rem;
  flex-flow: column;
  display: flex;
  position: relative;
}

.section-wrapper-vertical.section-wrapper-vertical-large {
  grid-column-gap: var(--sizes--section-wrapper-paddings-vertical);
  grid-row-gap: var(--sizes--section-wrapper-paddings-vertical);
}

.heading-horizontal {
  grid-column-gap: var(--sizes--section-wrapper-paddings-vertical);
  grid-row-gap: var(--sizes--section-wrapper-paddings-vertical);
  flex-flow: column;
  display: flex;
}
/* ... */

